<resources>
  <string name="app_name">Sophie\'s blog</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="fragment_one">第一个界面</string>
  <string name="fragment_two">第二个界面</string>

  <string name="bottom_home">主页</string>
  <string name="bottom_box">闲逛</string>
  <string name="bottom_bell">通知</string>

  <string name="cancel">取消</string>
  <string name="ensure">确定</string>
  <string name="title">题目</string>

  <string name="hello">你好</string>
  <string name="sun">阳光</string>

  <string name="Chinese">中文</string>
  <string name="English">英文</string>

  <string name="standard_definition">标清SD</string>
  <string name="high_definition">高清SD</string>

  <string name="voice">声音</string>

  <string name="startRecord">开始录屏</string>
  <string name="stopRecord">停止录屏</string>
  <string name="playRecord">播放录屏</string>
  <string name="unableScreenRecord">不能录屏</string>

  <string name="cutScreen">截屏</string>
  <string name="showScreen">展示截屏</string>

  <string name="file">文件</string>
  <string name="fileType">文件分类标题</string>
  <string name="cloudFile">云盘文件</string>
  <string name="phoneStore">手机存储</string>
</resources>
