<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".android.media.screenrecord.ScreenRecord">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_definition"></RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_definition"></RadioButton>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/voice"
            app:layout_constraintTop_toBottomOf="@id/radio"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatCheckBox>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/startRecord"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        tools:ignore="MissingConstraints"></Button>
</LinearLayout>